--- a/frontend/src/global/scss/app.scss
+++ b/frontend/src/global/scss/app.scss
@@ -4,7 +4,6 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Nunito";
-    max-height: 100%;
 }
 
 .container {
@@ -30,7 +29,13 @@ body {
         padding: calc(var(--grid-unit) * 1px);
         width: 100%;
         height: 100%;
-        margin-left: 60px; // side bar
+        margin-left: 250px; // side bar
         box-sizing: border-box;
+        transition-property: margin-left;
+        transition-duration: 0.2s;
+
+        &.collapsed {
+            margin-left: 60px; // side bar
+        }
     }
 }
