--- a/frontend/src/global/scss/variables.scss
+++ b/frontend/src/global/scss/variables.scss
@@ -7,4 +7,8 @@
     --text-color: #000;
     --icon-color: #555;
     --icon-width: calc(var(--grid-unit) * 4px);
+
+    // TODO place colors for dark mode as own variables
+
+    background: var(--background-color-content);
 }
